--- a/project todolist/index.html
+++ b/project todolist/index.html
@@ -12,7 +12,7 @@
 <body id="BG">  
     <div class="card-main">
       <form id="myForm">
-        <h5 class="card-title">Enter your tasks for today</h5>
+        <h5 class="card-title">Enter Your Tasks</h5>
         <textarea placeholder="Enter your Notes text here " autofocus id="inputText" class="main-text-area" required></textarea>
         <div class="card-footer">
           <div class="date-sector">
